@@ -23,6 +23,16 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-03-07  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Bob Friesenhahn's execution profile results in a number of speed-ups
+    with a faster LocaleCompare() algorithm and self-adjusting lists.
+
+2002-03-06  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Inlined AlphaComposite() and ValidateColormapIndex().
+  * Corrected compositing algorithm for the case where both source and
+    destination pixels had opacity values that were neither fully transparent
+    nor fully opaque.
+
 2002-03-05  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Memory overrun when drawing large circles.
 
