@@ -22,6 +22,7 @@
 
 		<LI><A HREF="#annotateimage">AnnotateImage</A>
 		<LI><A HREF="#encodesjis">EncodeSJIS</A>
+		<LI><A HREF="#encodetext">EncodeText</A>
 		<LI><A HREF="#encodeunicode">EncodeUnicode</A>
 		<LI><A HREF="#gettypemetrics">GetTypeMetrics</A>
 	</UL>
@@ -40,6 +41,7 @@
 <FONT SIZE=-1>SYNOPSIS</FONT></A></H1>
 <P>unsigned int  <STRONG>AnnotateImage</STRONG>( Image *image, DrawInfo *draw_info );</P>
 <P>encoding= <STRONG>EncodeSJIS</STRONG>( text, count );</P>
+<P>encoding= <STRONG>EncodeText</STRONG>( text, count );</P>
 <P>unicode= <STRONG>EncodeUnicode</STRONG>( text, count );</P>
 <P>unsigned int  <STRONG>GetTypeMetrics</STRONG>( Image *image, const DrawInfo *draw_info, TypeMetric *metrics );</P>
 <P>
@@ -67,7 +69,7 @@ The draw info.
 <P></P></DL></DL>
 <P>
 <H2><A NAME="encodesjis">EncodeSJIS</A></H2>
-<blockquote>EncodeSJIS() converts an ASCII text string to 2-bytes per character code ( like UCS-2 ) . Returns the translated codes and the character count. Characters under 0x7f are just copied, characters over 0x80 are tied with the next character. </blockquote><P>Method contributed by Katsutoshi Shibuya.</P>
+<blockquote>EncodeSJIS() converts an ASCII text string to 2-bytes per character code ( like UCS-2 ) . Returns the translated codes and the character count. Characters under 0x7f are just copied, characters over 0x80 are tied with the next character. </blockquote><P>Katsutoshi Shibuya contributed this method.</P>
 <P>The format of the EncodeSJIS function is:</P>
 <blockquote>encoding=EncodeSJIS ( text, count ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
@@ -86,8 +88,27 @@ The text.
 return the number of characters generated by the encoding.
 <P></P></DL></DL>
 <P>
+<H2><A NAME="encodetext">EncodeText</A></H2>
+<blockquote>EncodeText() converts an ASCII text string to wide text and returns the translation and the character count. </blockquote><P>The format of the EncodeText function is:</P>
+<blockquote>encoding=EncodeText ( text, count ); </blockquote><P>
+<FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
+<DL><DT><DD><DL>
+<dd><p></p><dt><STRONG>encoding:</STRONG><BR>
+<DD>
+<CODE>EncodeText()</CODE> returns a pointer to an unsigned short array array representing the encoded version of the 
+<FONT SIZE=-1>ASCII</FONT> string.
+<P></P>
+<dd><p></p><dt><STRONG>text:</STRONG><BR>
+<DD>
+The text.
+<P></P>
+<dd><p></p><dt><STRONG>count:</STRONG><BR>
+<DD>
+return the number of characters generated by the encoding.
+<P></P></DL></DL>
+<P>
 <H2><A NAME="encodeunicode">EncodeUnicode</A></H2>
-<blockquote>EncodeUnicode() converts an ASCII text string to Unicode and returns the Unicode translation and the character count. Normal characters are just copied. </blockquote><P>The format of the EncodeUnicode function is:</P>
+<blockquote>EncodeUnicode() converts an ASCII text string to Unicode and returns the Unicode translation and the character count. Characters under 0x7f are just copied, characters over 0x80 are tied with the next character. </blockquote><P>The format of the EncodeUnicode function is:</P>
 <blockquote>unicode=EncodeUnicode ( text, count ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
 <DL><DT><DD><DL>
